# gelfcpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.conan/test_package/: CMakeLists.txt  test_package.cpp
include/gelfcpp/: GelfMessage.hpp
include/gelfcpp/decorator/: StaticDecoratorSet.hpp
include/gelfcpp/output/: GelfJSONOutput.hpp
test/: CMakeLists.txt  TestDecorators.cpp
test_package/: CMakeLists.txt  test_package.cpp
